@@ -183,7 +183,7 @@ public class LogDirsCommandTest {
                     add((Integer) ((HashMap<String, Object>) brokersInformation.get(1)).get("broker"));
                 }};
             assertEquals(2, brokersInformation.size());
-            assertEquals(new HashSet<>(Arrays.asList(2, 1)), brokerIds);
+            assertEquals(Set.of(2, 1), brokerIds);
         }
     }
 
@@ -222,7 +222,7 @@ public class LogDirsCommandTest {
     private void createTopic(ClusterInstance clusterInstance, String topic) {
         try (Admin admin = Admin.create(Collections.singletonMap(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
             assertDoesNotThrow(() -> admin.createTopics(Collections.singletonList(new NewTopic(topic, Collections.singletonMap(0, Collections.singletonList(0))))).topicId(topic).get());
-            assertDoesNotThrow(() -> clusterInstance.waitForTopic(topic, 1));
+            assertDoesNotThrow(() -> clusterInstance.waitTopicCreation(topic, 1));
         }
     }
 }
